--- a/src/style/App.css
+++ b/src/style/App.css
@@ -8,7 +8,7 @@ body {
 .main {
     width: 100vw;
     height: 100vh;
-    background-color: yellow;
+    /* background-color: rgb(255, 255, 0); */
 
     margin: 0;
     padding: 0;
@@ -26,13 +26,29 @@ body {
     width: 100vw;
     height: 7vh;
     min-height: 7vh;
-    background-color: grey;
+    background-color: rgb(246, 246, 246);
 
+    display: flex;
+    align-items: center;
+    justify-content: start;
 
 
 
 }
 
+p {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+
+    color: rgb(41, 41, 41);
+    font-size: small;
+
+    margin-left: 10%;
+
+}
 
 .rotate {
     animation: App-logo-spin infinite 5s linear;
@@ -61,11 +77,11 @@ body {
 
 .grid {
 
-    
+
     height: 100%;
     width: 100vw;
 
-    background-color: green;
+    /* background-color: green; */
 
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -82,30 +98,102 @@ body {
 
 .item {
     width: 60%;
-    height: 50%;
-    background-color: red;
+    height: 40%;
+    /* background-color: red; */
 
     display: grid;
-    grid-template-columns: repeat(3 , 1fr);
-    grid-template-rows: repeat(2 , 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     row-gap: 10%;
     column-gap: 10%;
 
-
+    font-size: small;
 }
 
 
-.inner_item{
+
+.inner_item {
     width: 100%;
     height: 100%;
-    background-color: yellow;
+    background-color: rgb(253, 255, 227);
+    border-radius: 7%;
+
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn{
+    font-size: xx-small;
 }
 
 
-.one{
+.one {
     grid-row: 1/3;
 }
 
-.four{
+
+.four {
     grid-column: 2/4;
+
+}
+
+
+.pic {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+
+
+
+
+
+
+
+@media screen and (max-width: 800px) {
+
+    .item {
+        width: 70%;
+        height: 35%;
+        /* background-color: red; */
+        row-gap: 5%;
+        column-gap: 5%;
+
+        font-size: xx-small;
+    }
+
+    four {
+        font-size: 100%;
+    }
+
+    p {
+        font-size: xx-small;
+    }
+
+
+}
+
+
+
+@media screen and (max-width: 550px) {
+
+    .grid {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        /* background-color: red; */
+    }
+
+    .item {
+        width: 60%;
+        height: 25%;
+        font-size: 50%;
+    }
+
+    p{
+        font-size: 50%;
+    }
+
 }
