--- a/src/style/App.css
+++ b/src/style/App.css
@@ -50,13 +50,13 @@ p {
 
 }
 
-.rotate {
-    animation: App-logo-spin infinite 5s linear;
+/* .rotate { */
+    /* animation: App-logo-spin infinite 5s linear; */
 
-    width: 20%;
+    /* width: 20%; */
     /* height: 20%; */
 
-}
+/* } */
 
 
 
@@ -124,7 +124,7 @@ p {
     justify-content: center;
 }
 
-.btn{
+.btn {
     font-size: xx-small;
 }
 
@@ -148,6 +148,37 @@ p {
 }
 
 
+
+
+
+
+
+.round {
+    background-color: pink;
+    width: 10%;
+    height: 15%;
+    border-radius: 50%;
+
+    position: absolute;
+    top: 50vh;
+
+}
+
+
+
+.invisible {
+    display: none;
+}
+
+
+
+.round_img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    animation: App-logo-spin infinite 10s linear;
+
+}
 
 
 
@@ -193,8 +224,19 @@ p {
         font-size: 50%;
     }
 
-    p{
+    p {
         font-size: 50%;
     }
 
+}
+
+
+
+
+
+@media screen and (max-width: 400px) {
+.round{
+    width: 15%;
+    height: 10%;
+}
 }
